--- a/Project.toml
+++ b/Project.toml
@@ -17,3 +17,6 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 GZip = "92fee26a-97fe-5a0c-ad85-20a5f3185b63"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test", "GZip", "CSV"]
